# diceware

./: .editorconfig  .gitignore  .rustfmt.toml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  french.txt  shell.nix
diceware/: Cargo.toml
diceware-cli/: Cargo.toml
diceware-cli/src/: main.rs
diceware/src/: lib.rs
diceware/src/embedded/: mod.rs
src/: diceware.rs  error.rs  lib.rs  main.rs
src/diceware/: error.rs  mod.rs
src/diceware/embedded/: english.rs  french.rs
src/embedded/: mod.rs
