[package]
name = "diceware"
version = "1.0.2-dev"
authors = ["Jean-Philippe Cugnet <jean-philippe@cugnet.eu>"]
edition = "2021"
license = "GPL-3.0-only"
description = "A Diceware passphrase generator."

[dependencies]
clap = { version = "3.2", features = ["derive"] }
rand = "0.8"
unicode-segmentation = "1.2"

[dev-dependencies]
proptest = "1.0"
