[package]
name = "diceware-cli"
version = "1.0.2-dev"
authors = ["Jean-Philippe Cugnet <jean-philippe@cugnet.eu>"]
edition = "2021"
license = "GPL-3.0-only"
description = "A Diceware passphrase generator CLI."

[dependencies]
clap = { version = "3.2", features = ["derive"] }
diceware = { path = "../diceware" }

[[bin]]
name = "diceware"
path = "src/main.rs"
